--- a/scss/style.scss
+++ b/scss/style.scss
@@ -1,12 +1,13 @@
-@import "var";
-@import "text";
 @import "layout";
+@import "text";
 // @import "curve";
+@import "nav";
 @import "header";
-@import "areaInfo";
-@import "areaContent1";
-@import "areaContent2";
-@import "areaContent3";
-@import "areaContact";
+@import "area1_info";
+@import "area2_advantage";
+@import "area3_teacher";
+@import "area4_class";
+@import "area5_students";
+@import "area6_contact";
 @import "footer";
 
