--- a/scss/_header.scss
+++ b/scss/_header.scss
@@ -1,82 +1,183 @@
-.topbar {
-  height: map-get($heights, nav);
-  float: right;
- }
-#logo {
-  height: map-get($heights, nav);
-  margin-left: 1%;
-}
-.topbar li {
-  list-style: none;
-  display: inline-block;
-}
-.topbar li a {
-  padding: 25px;
-  text-decoration: none;
-  color: #666666;
-  line-height: map-get($heights, nav);
-  font-size: 18px;
-}
-
-/*-----header banner 手機版型----------------------*/
+/*header banner (桌機版型)=======================*/
 header {
-  background-image: url(../images/banner_bgm.jpg);
-  height: auto;
-  width: 100%;
-  margin: auto;
-  background-size: 100% auto;
-  background-repeat: no-repeat;
-  background-color: map-get($colors, primary);
-  position: relative;   //為了下方的弧形造型可以定位
+	background-image: url(../images/banner_bg.jpg);
+	// background-image: url(../source/BANNER-呈現效果.jpg);
+	background-position: center top;
+	background-repeat: no-repeat;
+	background-color: map-get($colors, primary);
+	width: 100%;
+	height: 690px;
+	margin: auto;
+	overflow: hidden;
+
+	//為了下方的弧形造型的排版
+	// padding-top: 1px;
+	// position: relative;
+}
+/*-----標題字的底色塊----------------------------*/
+header>div {
+	max-width: 655px;
+	height: 350px;
+	background-color: rgba($color: #1e8990, $alpha: 0.5);
+	// margin-top: 120px;
+	margin: 120px auto 0;
+	text-align: center;	//讓內容(p、img)置中對齊
+	position: relative;	//為了讓內容可以定位排版及z-index能發揮作用
+	z-index: 0;	//為了老師照片的z-index能正常發揮作用
+	padding-top: 1px;
+}
+/*-----老師圖片，要在色塊上方、標題文字下方--------*/
+header>div::before {
+	content: "";
+	background-image: url(../images/banner_teacher.png);
+	background-repeat: no-repeat;
+	display: block;	//為了指定寬高，讓背景圖顯示出來
+	width: 655px;
+	height: 600px;
+	position: absolute;
+	top: -20px;
+	left: 502px;
+	z-index: -1;	//為了讓大標題(img)能在上層不被遮住
+}
+/*-----副標題文字: 工作效率UP...-----------------*/
+header>div>p {
+	color: #FFF;
+	font-size: 24px;
+	font-weight: bold;
+	letter-spacing: 0.1em;
+	max-width: 475px;
+	margin: auto;
+	position: relative;
+	top: 38px;
+	
+	// 上下的裝飾線條
+	border-top: 2px solid #FFF;
+	border-bottom: 2px solid #FFF;
+	padding: 8px 0;
+}
+/*-----大標題圖片: 掌握Excel...-----------------*/
+header>div>img {
+	margin-top: 36px;
+}
+/*-----標題的裝飾箭頭---------------------------*/
+header>div::after {
+	content: "";
+	background-image: url(../images/banner_arrow.png);
+	background-repeat: no-repeat;
+	display: block;	//為了指定寬高，讓背景圖顯示出來
+	width: 188px;
+	height: 160px;
+	position: relative;
+	top: -95px;
+	left: 446px;
 }
 
-/*-----header banner 平板版型----------------------*/
-@media (min-width: 768px) {
-  header {
-    background-image: url(../images/banner_bgt.jpg);
-    background-size: cover;
-    background-position: center bottom;
-  }
-}
-@media (max-width: 920px) {
-  .topbar {display: none;}
+/*header banner 平板版型========================*/
+@media (max-width: 1024px) {
+	header {
+		// background-image: url(../images/banner_bgt.jpg);
+		background-image: url(../source/banner_bgt_test.jpg);
+		background-size: 100% auto;
+		height: 0;
+		padding-bottom: 85%;	//代替height來設定區塊高度，依照底圖的長寬比
+
+		div {//標題字的底色塊
+			margin-top: 11.5%;
+			//為了讓老師照片的大小及位置可以隨視窗大小微調，改成只有內容區有底色並增加百分比的padding
+			background-clip: content-box; 
+			padding: 0 10% 50%;
+
+			&::before {//老師圖片
+				top: 27.5%;
+				left: 61%;
+				width: 50%;
+				background-size: contain;				
+			}
+		}
+	}
 }
 
-/*-----header banner 桌機版型----------------------*/
-@media (min-width: 1300px) {
-  header {
-    background-image: url(../images/banner_bg.jpg);
-    background-position: center top;
-    background-size: auto;
-  }
+			
+/*header banner 手機版型======================*/
+@media (max-width: 815px) {
+	header {
+		background-image: url(../images/banner_bgm.jpg);
+		padding-bottom: 125%;
+
+		div {//標題字的底色塊
+			width: 90%;
+			// 為了讓色塊可以隨視窗調整大小，background-clip改回預設模式，又因父元素header的高度為0，只能採用和header一樣的做法來讓高度隨視窗調整
+			background-clip: border-box;
+			height: 0;
+			padding: 0 0 50%;	//色塊的高度
+
+			&::before {//老師圖片
+				width: 70%;
+				top: 91.8%;
+				left: 48%;
+			}
+			p {//副標題文字: 工作效率UP...
+				font-size: 21px;
+				letter-spacing: 2px;
+				width: 70%;
+				margin-left: 15%;
+				
+			}
+			img {//大標題圖片: 掌握Excel...
+				width: 80%;
+			}
+			&::after {//標題的裝飾箭頭
+				background-size: contain;
+				width: 25%;
+				left: 70%;
+				top: -65px;
+			}
+		}
+	}
 }
-  header img {
-    max-width: 620px;
-    width: 300px;
-    width: 80vw;
-    display: block;
-    padding: 5% 0 350px 0;
-    margin-left: auto;
-    margin-right: auto;
-  }
+			
+/*header banner 小手機版型====================*/
+@media (max-width: 565px) {
+	header {
+		
+		div {//標題字的底色塊
+			padding-bottom: 55%;	//色塊的高度
 
-
+			&::before {//老師圖片
+				// top: 75%;
+				top: 89%;
+			}
+			p {//副標題文字: 工作效率UP...
+				font-size: 18px;
+				letter-spacing: 1px;
+				line-height: 1.1em;
+				width: 70%;
+				margin-left: 15%;				
+			}
+			img {
+				width: 75%;
+				margin-top: 12%;
+			}
+			&::after {//標題的裝飾箭頭
+				width: 23%;
+				top: -55px;
+				left: 73%;
+			}
+		}
+	}
+}
+			
+	
 // 下方三角形造型裝飾
-header::after {
-  content: "";
-  width: 100%;
-  height: 100%;
-  position: absolute;
-  bottom: -1px;
-  display: block;
-  background-image: url(../images/header_triangle.svg);
-  background-size: contain;
-  background-repeat: no-repeat;
-  background-position: bottom;
-}
-
-// 視窗縮小 弧形造型弄扁一點-----------
-// @media (max-width: 815px) {
-// header::after, .info, .content1, .content2, .content3 {background-size: 100% 30px;}
-// .info .container>div {margin: 3% 10%;}
+// header::after {
+//   content: "";
+//   width: 100%;
+//   height: 100%;
+//   position: absolute;
+//   bottom: -1px;
+//   display: block;
+//   background-image: url(../images/header_triangle.svg);
+//   background-size: 100% auto;
+//   background-repeat: no-repeat;
+//   background-position: bottom;
 // }
