--- a/scss/_area2_advantage.scss
+++ b/scss/_area2_advantage.scss
@@ -61,6 +61,7 @@
     .advantage .container>div .circle  {
         // min-width: 93%;
         width: 93%;
+        height: auto;
         min-height: 100px;
             
     }
