--- a/scss/_area3_teacher.scss
+++ b/scss/_area3_teacher.scss
@@ -2,7 +2,8 @@
   background-image: url(../images/bg_lightorange.jpg);
   .container {
     overflow: auto;
-    zoom: 1;
+		zoom: 1;
+		
 		img {
 			border-radius: 50%;
 			margin: 60px 6% 0;
@@ -13,6 +14,7 @@
 			float: left;
 			width: 65%;
 			padding: 10px;
+			padding-right: 32px;
 			box-sizing: border-box;
 
 		}
@@ -30,11 +32,15 @@
 }
 /*=====RWD==========================*/
 @media (max-width: 1015px){
+	.teacher .container {
+		// width: 70%;
+	}
 	.teacher .container img {
 		width: 215px;
 	}
 	.teacher .container h3, .teacher .container ul, .teacher .container p {
-		max-width: 60%;		
+		width: 60%;
+		padding-right: 0;
 	}
 }
 @media (max-width: 835px){
@@ -45,12 +51,14 @@
 		width: 250px;
 		float: none;
 		display: block;
-		margin: 0 auto;
+		margin: 0 auto 15px;
 /*		padding-top: 70px;*/
 	}
 	.teacher .container h3, .teacher .container ul, .teacher .container p {
 		float: none;
 		width: auto;
-		max-width: none;
+		width: 85%;
+		margin: auto;
 	}
+
 }
