--- a/scss/_area5_students.scss
+++ b/scss/_area5_students.scss
@@ -25,21 +25,33 @@
 	}
 }
 /*=====適合對象================================*/
-    @media (max-width: 875px){
-        .students .container {
-            padding-top: 50px;
-            padding-bottom: 50px;
-            // max-width: 450px;
-        }
-        .students img {
-            float: none;
-            width: 60%;
-            display: block;
-            margin: 0 auto 20px;
-        }
-        .students h3, .students ul {
-            float: none;
-            width: 300px;
-            margin: 0 auto;
-        }
-    }
+@media (max-width: 875px){
+	.students .container {
+		padding-top: 50px;
+		padding-bottom: 50px;
+		// max-width: 450px;
+	}
+	.students img {
+		float: none;
+		width: 60%;
+		display: block;
+		margin: 0 auto 20px;
+	}
+	.students h3, .students ul {
+		float: none;
+		width: 370px;
+		margin: 0 auto;
+	}
+}
+@media (max-width: 480px){
+	.students .container {
+
+	}
+	.students img {
+
+	}
+	.students h3, .students ul {
+		max-width: 300px;
+		width: 90%;
+	}
+}
